# Text-processing1

./: README.md
config/: gatorgrader.yml
textanalysis/: pyproject.toml
textanalysis/text/: generated_one.txt  generated_two.txt  input_one.txt  input_two.txt
textanalysis/textanalysis/: extract.py  main.py  visualize.py
writing/: reflection.md
