[tool.poetry]
name = "textanalysis"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
textanalysis = "textanalysis.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.9.0"
supervenn = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
taskipy = "^1.8.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
mypy = "^0.910"

[tool.taskipy.tasks]
black = { cmd = "black textanalysis --check", help = "Run the black checks for source code format" }
reformat = { cmd = "black textanalysis", help = "Run the black reformatter for source code style" }
flake8 = { cmd = "flake8 textanalysis", help = "Run the flake8 checks for source code documentation" }
mypy = { cmd = "poetry run mypy textanalysis", help = "Run the mypy type checker for potential type errors" }
pydocstyle = { cmd = "pydocstyle textanalysis", help = "Run the pydocstyle checks for source code documentation" }
pylint = { cmd = "pylint textanalysis", help = "Run the pylint checks for source code documentation" }
all = "task black && task flake8 && task pydocstyle && task pylint && task mypy"
lint = "task black && task flake8 && task pydocstyle && task pylint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
